--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -597,3 +597,24 @@ body {
     height: 100%;
     border: none;
 }
+
+/* construction */
+
+.construction {
+    position: absolute;
+    inset: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    background: var(--background-color);
+    color: var(--text-color);
+    font-family: 'Google Sans', sans-serif;
+    font-size: 1.6rem;
+    font-weight: 500;
+}
+
+.construction img {
+    height: 400px;
+}
